--- a/final_project/epeksergasia_aithmatos.html
+++ b/final_project/epeksergasia_aithmatos.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
   <style>
-    body{background-image: url('redtechno.jpg');
+    body{background-image: url(/our_images/redback3.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;}
    </style>
+   <style>thead{color:black; }</style>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Επεξεργασία αιτήματος</title>
@@ -15,7 +17,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="our_css/general.css">
+  <link rel="stylesheet" href="kon">
   <link rel="stylesheet" href="our_css/aithmata_ulikwn.css"> 
   <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
@@ -97,11 +99,12 @@
 <div class="table-responsive">
 <table class="w3-table-all notranslate">
   <tr>
-    <th style="width:10%;">Κωδικός υλικού</th>
-    <th style="width:10%;">Όνομα υλικού</th>
-    <th style="width:10%;">Ποσότητα</th>
-    <th style="width:15%;">Μονάδα μέτρησης</th>
-
+    <thead>
+    <th style="width:10%; background-color: grey">Κωδικός υλικού</th>
+    <th style="width:10%; background-color: grey">Όνομα υλικού</th>
+    <th style="width:10%; background-color: grey">Ποσότητα</th>
+    <th style="width:15%; background-color: grey">Μονάδα μέτρησης</th>
+  </thead>
   </tr>
   <tr>
    <td> #41</td>
